--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ script:
   - flake8 molo
   - molo scaffold testapp --include molo.usermetadata ^usermetadata/
   - flake8 testapp
+  - cp test_settings.py testapp/testapp/settings/local.py
   - pip install -e testapp
   - py.test --cov=molo
 after_success:
