--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
   - pip install -e . --cache-dir $HOME/.pip-cache/
 script:
   - flake8 molo
-  - molo scaffold testapp --include molo.usermetadata ^usermetadata/
+  - molo scaffold testapp --include molo.usermetadata ^meta/
   - flake8 testapp
   - cp test_settings.py testapp/testapp/settings/local.py
   - pip install -e testapp
