--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [flake8]
 exclude = ve,docs,molo/*/migrations/*
-ignore = F403
+ignore = F403, E305
 
 [pytest]
 addopts = --verbose --ds=testapp.settings --nomigrations --cov=molo --cov-report=term -s ./molo
