--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,6 +1,6 @@
-pytest==2.9.2
-pytest-django==2.9.1
+pytest==3.0.0
+pytest-django==3.1.1
 pytest-cov
 pytest-xdist
-flake8
+flake8==3.4.1
 responses
