update travis conf, create template dir in testapp

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ script:
   - molo scaffold testapp --include molo.usermetadata ^meta/
   - flake8 testapp
   - cp test_settings.py testapp/testapp/settings/local.py
+  - mkdir testapp/testapp/templates/
   - cp molo/usermetadata/test_templates/base.html testapp/testapp/templates/base.html
   - pip install -e testapp
   - py.test --cov=molo
