--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,6 +1,2 @@
-pytest==3.0.0
-pytest-django==3.1.1
-pytest-cov
-pytest-xdist
-flake8==3.4.1
-responses
+# Our dependencies are all specified in setup.py
+-e .[test,cover,lint]
